c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/bitwise_shiftl_variable.c
int main(void) {
    int x = 3;
    return x << 3;
}