c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/invalid_specifier.c
int main(void) {
    int foo bar = 3;
    return bar;
}